--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,10 @@
-spring.datasource.url: jdbc:h2:mem:testdb
-spring.datasource.driverClassName: org.h2.Driver
-spring.datasource.username: sa
-spring.datasource.password: password
-spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/stocks-transactions
+    username: postgres
+    password: postgres
+  jpa.hibernate.ddl-auto: update
+
 amazon:
   accessKey: ${AMAZON_ACCESS_KEY}
   secretKey: ${AMAZON_SECRET_KEY}
