--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
             <version>4.6.1</version>
+            <scope>runtime</scope>
         </dependency>
 
 
