--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,9 +1,8 @@
-spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/stocks-transactions
-    username: postgres
-    password: postgres
-spring.jpa.hibernate.ddl-auto: validate
+spring.datasource.url: jdbc:h2:mem:testdb
+spring.datasource.driverClassName: org.h2.Driver
+spring.datasource.username: sa
+spring.datasource.password: password
+spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
 
 amazon:
   accessKey: test
